cuadrado con enlace

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
             <% } %>
             <div class="general-linea">
                 <div class="cuadrados">
-                    <a href="/cursos" class="Cuadrados">
+                    <a href="/cursos" class="Cuadrados enlace">
                         <p class="textoimagen">Cursos</p>
                         <img src="/img/cursos.jpg" width="70%" height="70%" alt="Cursos">
                     </a>
@@ -20,7 +20,7 @@
                     <img src="/img/bienvenidos.png" width="60%" height="80%" alt="Bienvenido a PhpForDevs" >
                 </div>
                 <div class="cuadrados">
-                    <a href="/cuestionarios">
+                    <a href="/cuestionarios" class="enlace" >
                         <p class="textoimagen">Cuestionarios</p>
                         <img src="/img/cuestionario2.png" width="50%" height="90%" alt="Cuestionarios">
                     </a>
@@ -28,7 +28,7 @@
             </div>
             <div class="general-linea">
                 <div class="cuadrados">
-                    <a href="/ejemplos">
+                    <a href="/ejemplos" class="enlace">
                         <p class="textoimagen">Ejemplos</p>
                         <img src="/img/phplogo.png" width="60%" height="75%" alt="Ejemplos">
                     </a>
@@ -38,7 +38,7 @@
                         camino de aprendizaje"</p>
                 </div>
                 <div class="cuadrados">
-                    <a href="/foro">
+                    <a href="/foro" class="enlace">
                         <p class="textoimagen">Foro</p>
                         <img src="/img/foro.png" width="60%" height="80%" alt="Foro">
                     </a>
