--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,13 @@ a{
     text-decoration: none;
 }
 
+.enlace{
+    text-decoration: none;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 .container{
     max-width: 1270px;
     margin: auto;
