--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,20 +4,23 @@
             <% if(login !=undefined ){%>
                 <% for(let i=0; i<data.length;i++){ %>
                     <% if(name == data[i].id_user ){%>
-                    <p class="welcome">Bienvenido <%=data[i].username%></p>
-            <% } %>
-            <% } %>
-            <% } %>
+                <!--<p class="welcome">Bienvenido </p>-->
+            
             <div class="general-linea">
+                <p class="welcome2">Usuario: <%=data[i].username%></p>
                 <div class="cuadrados">
                     <a href="/cursos" class="Cuadrados">
                         <p class="textoimagen">Cursos</p>
-                        <img src="/img/cursos.jpg" width="70%" height="70%" alt="Gato">
+                        <img src="/img/cursos.jpg" width="70%" height="70%" alt="curso de php">
                     </a>
                 </div>
                 <div class="cuadrados">
                     <p class="textobienvenida">Bienvenidos a PhpForDevs</p>
-                    <img src="/img/bienvenidos.png" width="60%" height="80%">
+                    <p class="welcome1">Usuario: <%=data[i].username%></p>
+                    <% } %>
+                <% } %>
+            <% } %>
+                    <img src="/img/bienvenidos.png" width="55%" height="75%" >
                 </div>
                 <div class="cuadrados">
                     <a href="/cuestionarios">
