--- a/public/css/login.css
+++ b/public/css/login.css
@@ -25,7 +25,7 @@ h1 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-around;
-  width: 80%;
+  width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -129,6 +129,7 @@ a:hover {
 @media (max-width: 900px) {
   .loginform {
     width: 100%;
+
   }
 
   .registerform {
@@ -144,5 +145,17 @@ a:hover {
     font-size: 18px;
     padding: 1%;
     width: 80%;
+  }
+  .pos .loginform,
+  .pos .registerform {
+    font-size: 16px;
+    width: 100%;
+    margin: 5%;
+    padding: 5%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
   }
 }
