--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
                         <img src="/img/cursos.jpg" width="70%" height="70%" alt="Cursos">
                     </a>
                 </div>
+                <!--cuadros-->
                 <div class="cuadrados">
                     <p class="textobienvenida">Bienvenidos a PhpForDevs</p>
                     <p class="welcome1">Usuario: <%=data[i].username%></p>
