--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,12 @@
             <% if(login !=undefined ){%>
                 <% for(let i=0; i<data.length;i++){ %>
                     <% if(name == data[i].id_user ){%>
-                <!--<p class="welcome">Bienvenido </p>-->
-            
+                    <p class="welcome">Bienvenido <%=data[i].username%></p>
+                    <% } %>
+                <% } %>
+            <% } %>
             <div class="general-linea">
-                <p class="welcome2">Usuario: <%=data[i].username%></p>
+                
                 <div class="cuadrados">
                     <a href="/cursos" class="Cuadrados enlace">
                         <p class="textoimagen">Cursos</p>
@@ -17,10 +19,8 @@
                 <!--cuadros-->
                 <div class="cuadrados">
                     <p class="textobienvenida">Bienvenidos a PhpForDevs</p>
-                    <p class="welcome1">Usuario: <%=data[i].username%></p>
-                    <% } %>
-                <% } %>
-            <% } %>
+                    
+                    
                     <img src="/img/bienvenidos.png" width="55%" height="75%" alt="Bienvenido a PhpForDevs" >
                 </div>
                 <div class="cuadrados">
