--- a/public/css/cuestionarios.css
+++ b/public/css/cuestionarios.css
@@ -1,7 +1,7 @@
 .contenedorG{
     margin: 3%;
     padding: 0%;
-    height: 40em;
+    height: 45em;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -50,16 +50,16 @@
 /*Para que sea responsivo*/
 @media(max-width:900px){
     .contenedorG{
-        margin: 5%;
-        padding: 5%;
-        height: 100%;
+        margin: 3%;
+        padding: 0%;
+        height: 35em;
     }
     .contenedorG a{
         width: 100%;
+        
     }
     .contenedorG a .cSectionC{
-        margin: 2%;
-        padding: 0%;
+        padding: 10px;
     }
 }
 
