--- a/public/css/cuestionarios.css
+++ b/public/css/cuestionarios.css
@@ -52,7 +52,7 @@
     .contenedorG{
         margin: 3%;
         padding: 3%;
-        height: 30em;
+        height: 800px;
     }
     .contenedorG a{
         width: 100%;
