--- a/views/vervideo.ejs
+++ b/views/vervideo.ejs
@@ -24,7 +24,7 @@
         </div>
         <div class="video flex">
             <div class="watch">
-                <iframe width="720" height="450" src="<%= video[0].url %>" title="YouTube video player" frameborder="0"
+                <iframe src="<%= video[0].url %>" title="YouTube video player" frameborder="0"
                     allowfullscreen></iframe>
             </div>
             <div class="video-info">
