se soluciono el bug de el boton de mostrar los siguientes videos en la seccion de ver videos ahora se puede cerrar la navegacion de la lista de videos

--- a/public/css/watchvideo.css
+++ b/public/css/watchvideo.css
@@ -107,7 +107,7 @@
     position: absolute;
   }
   .home-section {
-    left: 48rem;
+    left: calc(100% - 3rem);
     background: red;
   }
   .video {
