--- a/public/css/watchvideo.css
+++ b/public/css/watchvideo.css
@@ -52,7 +52,6 @@
 }
 .sidebar-videos.close ~ .home-section {
   left: 2rem;
-  width: calc(100% - 4rem);
   color: #242434;
 }
 
@@ -114,7 +113,7 @@
     margin-top: 4rem;
   }
   .sidebar-videos.close ~ .home-section {
-    left: 48rem;
+    left: calc(100% - 3rem);
   }
 }
 .publication {
