Correccion de nombre de los integrantes

--- a/views/acercaDNosotros.ejs
+++ b/views/acercaDNosotros.ejs
@@ -33,7 +33,7 @@
                 <p>Miguel Ángel Amaya Rodriguez</p>
                 <p>Christian Javier Ayala Guerra</p>
                 <p>Diego José Ayala Guerra</p>
-                <p>Luis Alonso Cornejo Delgado</p>
+                <p>Luis Alonso Cornejo Jiménez</p>
                 <p>Carolina Isabel Pineda Delgado</p>
                 <p>José Gustavo Pineda Delgado</p>
                 <p>William Enrique Vásquez Mancía</p>
