correccion de rutas en el footer

--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -9,8 +9,8 @@
                 <a href="mailto:phpfordevs@gmail.com?"><i class="fas fa-envelope"></i></a>
             </li>
 
-            <li><a href="../terminosycondiciones">Términos y condiciones</a></li>
-            <li><a href="../acercaDNosotros">Acerca de nosotros</a></li>
+            <li><a href="/terminosycondiciones">Términos y condiciones</a></li>
+            <li><a href="/acercaDNosotros">Acerca de nosotros</a></li>
         </ul>
     </div>
 </footer>
