--- a/public/css/watchvideo.css
+++ b/public/css/watchvideo.css
@@ -215,7 +215,7 @@
 /* SECCION DE RECURSOS */
 .recursos ul {
   display: flex;
-  gap: .3rem;
+  gap: 0.3rem;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -243,6 +243,9 @@
 .recursos ul li:hover {
   background: #545474af;
 }
-.recursos ul li a:visited{
+.recursos ul li a:visited {
   color: #ffffff;
+}
+a {
+  width: 100%;
 }
